[FIX] fix response pending groups